[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-python-app"
version = "0.1.0"
description = "Starter Python project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "You" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
strict_optional = true
